# tetris-in-c

./: CMakeLists.txt  main.c  matrix.c  matrix.h  readme.md  tetris_shape.c  tetris_shape.h
